# zen-conf

./: .gitignore  README.md  pyproject.toml
browser_conf/: __init__.py  apply.py  json_to_yaml.py
conf/: arch-err_config.yaml
conf/extensions/: vimium_c-20260102_192547.json
examples/: config.yaml
templates/: policies.json.j2  user.js.j2
